src/assets/scss/layout/_request.scss
@import "../abstracts/mixins";

.request {
  position: relative;
  z-index: -1;

  overflow: hidden;

  width: 100%;

  background-color: rgb(255, 255, 255);
  background-image: url("../images/request_form_back.png");
  background-repeat: no-repeat;

  @include hidden_in_mobile();

  @media #{$information_desktop} {
    height: 800px;
  }
}

.request * {
  background: transparent;
}

.request-circle {
  position: absolute;
  top: 52px;
  left: -160px;
  z-index: -1;

  width: 636px;
  height: 636px;

  border: 3px solid $Gold;
  border-radius: 100%;
}

.request_container {
  display: grid;

  margin-left: 340px;
  padding-top: 79px;

  grid-template-columns: 480px 550px;
  grid-template-rows: 111px 159px 162px 125px 125px;
}

.request_container-point {
  display: flex;

  margin-top: 11px;
}

.request_container-number {
  z-index: 1;

  width: 42px;
  height: 42px;

  font-family: $YesevaOne;
  font-size: 1.1rem;
  line-height: 42px;

  color: #ffffff;
  border: 10px solid #ffffff;
  border-radius: 100%;
  background-color: $Gold;

  text-align: center;
  vertical-align: middle;
}

.request_container-text {
  margin-left: 6px;

  font-family: $FuturaMediumC;
  font-size: 1.1rem;

  letter-spacing: 0.2px;
}

.request_container-first_point {
  margin-left: 7px;

  grid-column: 1;
  grid-row: 1;

  .request_container-text {
    margin-top: 23px;
  }
}

.request_container-second_point {
  margin-left: 81px;

  grid-column: 1;
  grid-row: 2;

  .request_container-text {
    margin-top: 33px;
  }
}

.request_container-third_point {
  margin-left: 106px;

  grid-column: 1;
  grid-row: 3;

  .request_container-text {
    margin-top: 37px;
  }
}

.request_container-fourth_point {
  margin-left: 41px;

  grid-column: 1;
  grid-row: 4;

  .request_container-text {
    margin-top: 26px;
  }
}

.request_form {
  width: 506px;
  height: 509px;
  margin-top: 27px;
  margin-left: 15px;

  background-color: #131313;

  grid-column: 2;
  grid-row: 1 / span 4;

  .input_container {
    margin-top: 42px;
    margin-left: 47px;
  }

  .form-input {
    width: 408px;
    height: 50px;

    font-family: $FuturaMediumC;
    font-weight: 800;
    font-size: 1.15rem;
  }

  .form-submit {
    width: 200px;
    height: 51px;

    font-family: $FuturaDemiC;
    font-size: 0.95rem;
  }

  .form-label {
    font-family: $FuturaBookC;

    color: #ffffff80;
  }

  .checkbox_container {
    width: 290px;
    margin-top: 17px;
    margin-left: 48px;

    font-family: $FuturaBookC;

    color: #ffffff;
  }

  .form-submit {
    width: 213px;
    margin-top: 40px;
    margin-left: 244px;

    font-size: 0.8rem;
  }
}

.request_form-label {
  width: 295px;
  margin-top: 26px;

  font-family: $FuturaDemiC;
  font-size: 1.3rem;

  color: #ffffff;

  text-align: center;

  @include on_page_center();
}

.offer_container {
  display: flex;

  margin-left: 46px;

  grid-column: 2;
  grid-row: 5;
}

.offer_container-logo {
  content: url("../images/pig.png");
}

.offer_container-text {
  width: 240px;
  margin-left: 25px;
  margin-top: 28px;

  font-family: $FuturaDemiC;
  font-size: 1.25rem;

  color: $Gold;
}

